[WinCairo] font fallback not working https://bugs.webkit.org/show_bug.cgi?id=146595

Patch by Jinyoung Hur <hur.ims@navercorp.com> on 2015-07-15
Reviewed by Myles C. Maxfield.

A Win32 API, GetGlyphIndices(), is not used properly, so any glyphs are considered existing in a font and it prevents the font fall back mechanism from working.

I think a specific font should be newly installed on the test machine to test this case but I have no idea how can it be done.

* platform/graphics/win/GlyphPageTreeNodeCairoWin.cpp:
(WebCore::GlyphPage::fill):

Canonical link: https://commits.webkit.org/165036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186862 268f45cc-cd09-0410-ab3c-d52691b4dbfc